# inex-launcher

./: .gitattributes  .gitignore  MANIFEST.in  README.md  add-tag.sh  build-deps.txt  build.sh  cleanup.sh  inst-dep.sh  install.sh  publish.sh  pyproject.toml  requirements.txt  setup.py  test.sh  tox.ini  uninstall.sh
.claude/skills/inex-launcher/: SKILL.md  examples.md  reference.md
.codex/skills/inex-launcher/: SKILL.md
.codex/skills/inex-launcher/agents/: openai.yaml
.cursor/skills/inex-launcher/: SKILL.md  examples.md  reference.md
.github/workflows/: publish.yml  pythonapp.yml
demo/: requirements.txt
demo/basic/: model.yaml  run.py  run.py.yaml  run.yaml
demo/chime/: train_16.py  train_16.py.yaml  train_16.yaml
demo/mnist/: bagua.yaml  config.yaml  ddp.yaml  effnet.yaml  mlp.yaml  models.py  module.py  train.sh  train.yaml  train_bagua.sh  train_ddp.sh
demo/numpy/: config.yaml  show.yaml
demo/onnx/: config.yaml  export.yaml
demo/show/: config.yaml
inex/: __init__.py  engine.py  helpers.py  inex.py
inex/utils/: configure.py  convert.py  fsystem.py
mkernel/: engine.py  mkernel.py
mkernel/utils/: configure.py  options.py
tests/: test_01_execute.py  test_01_execute.yaml  test_args.py  test_args.yaml  test_basic.py  test_basic.yaml  test_built_in.py  test_built_in.yaml  test_compose.1.yaml  test_compose.2.yaml  test_compose.py  test_engine.py  test_eval.py  test_eval.yaml  test_export.py  test_export.yaml  test_fetch.1.yaml  test_fetch.2.yaml  test_fetch.py  test_import.1.yaml  test_import.2.yaml  test_import.3.yaml  test_import.4.yaml  test_import.py  test_is_done.py  test_is_done.yaml  test_item.py  test_item.yaml  test_kwargs.yaml  test_log_path.py  test_num_lines.py  test_num_lines.yaml  test_numpy.py  test_numpy.yaml  test_pos_args.py  test_pos_args.yaml  test_read_text.py  test_read_text.txt  test_read_text.yaml  test_resolve.py  (+10 more)
tests/configs/: compute1.yaml  compute2.yaml  message.yaml  part1.yaml  part2.yaml  part3.yaml  part4.yaml
tests/plugins/: calculator1.py  calculator2.py  chunker.py  collection.py  dataset.py  features.py  generator.py  message.py
